# ithriveai-job-analyzer

./: app.py  app_production.py  bls_connector.py  bls_job_mapper.py  database.py  job_api_integration_database_only.py  job_title_autocomplete_v2.py  simple_comparison.py
.streamlit/: admin_dashboard.py  ai_job_displacement.py  app_production.py  bls_employment_data.py  career_navigator.py  config.toml  job_api_integration_database_only.py  job_title_autocomplete_v2.py  pyproject.toml
